<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/math_operation"
        android:layout_width="match_parent"
        android:layout_height="120sp"
        android:textColor="@android:color/white"
        android:gravity="end"
        android:ellipsize="start"
        android:textSize="60sp"
        android:singleLine="true"
        />

    <TextView
        android:id="@+id/result_text"
        android:layout_width="match_parent"
        android:layout_height="160sp"
        android:textColor="@android:color/white"
        android:gravity="end"
        android:ellipsize="end"
        android:textSize="80sp"
        android:singleLine="true"
        />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <TextView
                style = "@style/ActionButton"
                android:id="@+id/btn_allClear"
                android:text="@string/ac"
                />
            <TextView
                style = "@style/ActionButton"
                android:id="@+id/btn_open"
                android:text="@string/open"
                />
            <TextView
                style = "@style/ActionButton"
                android:id="@+id/btn_close"
                android:text="@string/close"
                />
            <TextView
                style = "@style/ActionButton"
                android:id="@+id/btn_div"
                android:text="@string/div"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <TextView
                style = "@style/NumberButton"
                android:id="@+id/btn_7"
                android:text="@string/_7"
                />
            <TextView
                style = "@style/NumberButton"
                android:id="@+id/btn_8"
                android:text="@string/_8"
                />
            <TextView
                style = "@style/NumberButton"
                android:id="@+id/btn_9"
                android:text="@string/_9"
                />
            <TextView
                style = "@style/ActionButton"
                android:id="@+id/btn_mul"
                android:text="@string/mul"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <TextView
                style = "@style/NumberButton"
                android:id="@+id/btn_4"
                android:text="@string/_4"
                />
            <TextView
                style = "@style/NumberButton"
                android:id="@+id/btn_5"
                android:text="@string/_5"
                />
            <TextView
                style = "@style/NumberButton"
                android:id="@+id/btn_6"
                android:text="@string/_6"
                />
            <TextView
                style = "@style/ActionButton"
                android:id="@+id/btn_plus"
                android:text="@string/plus"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <TextView
                style = "@style/NumberButton"
                android:id="@+id/btn_1"
                android:text="@string/_1"
                />
            <TextView
                style = "@style/NumberButton"
                android:id="@+id/btn_2"
                android:text="@string/_2"
                />
            <TextView
                style = "@style/NumberButton"
                android:id="@+id/btn_3"
                android:text="@string/_3"
                />
            <TextView
                style = "@style/ActionButton"
                android:id="@+id/btn_min"
                android:text="@string/min"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <TextView
                style = "@style/NumberButton"
                android:id="@+id/btn_0"
                android:text="@string/_0"
                />

            <TextView
                style = "@style/NumberButton"
                android:id="@+id/btn_dot"
                android:text="@string/dot"
                />
            <TextView
            style = "@style/NumberButton"
            android:id="@+id/btn_back"
            android:text="@string/_back"
            />
            <TextView
                style = "@style/ActionButton"
                android:id="@+id/btn_eq"
                android:text="@string/eq"
                />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>